# ragu

./: .gitignore  CACHING.md  CLI.md  Cargo.toml  README.md  dist-workspace.toml  spago.yaml  test-errors.yaml  test-spago.yaml  test-transitive.yaml
examples/benches/: generate_workspace_benchmark.sh
examples/local-package-test/: spago.yaml
examples/purs/test-workspace/: spago.yaml
local-package-test/src/: Blah.purs
purs/: spago.yaml
purs/src/: Main.purs
purs/test-workspace/: spago.yaml
purs/test-workspace-2/: spago.yaml
src/: main.rs
src/cache/: mod.rs
src/cli/: execute_command.rs  execution_context.rs  mod.rs
src/cli/commands/: build.rs  cache.rs  info.rs  install.rs  list.rs  mod.rs  search.rs  stats.rs  uninstall.rs  validate.rs
src/config/: mod.rs  run_validate.rs  types.rs  update.rs  validation.rs
src/imports/: mod.rs
src/init/: extras.rs  ignore.rs  mod.rs  src.rs  test.rs  yaml.rs
src/install/: cache.rs  cleanup.rs  command.rs  extra.rs  git.rs  manager.rs  mod.rs  uninstall.rs
src/modules/: mod.rs  service.rs
src/package_info/: search.rs
src/package_sets/: list.rs  mod.rs
src/print_output/: mod.rs
src/registry/: cache.rs  mod.rs  package_sets.rs  packages.rs  purescript_registry.rs  types.rs  workspace_packages.rs
src/run/: mod.rs
src/sources/: mod.rs  tests.rs
src/src_as_sources/: README.md  benchmark.rs  import_parsing.rs  mod.rs
src/test/: mod.rs
src/workspace/: mod.rs
workflows/: release.yml
