[package]
name = "spago-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
git2 = "0.18"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
bincode = "1.3"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
