[package]
name = "ragu"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/finnhodgkin/ragu"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
yaml-rust = "0.4"
tar = "0.4"
git2 = "0.20"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
bincode = "1.3"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
dirs = "6.0"
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "3.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
glob = "0.3"
tempfile = "3.0"
flate2 = "1.1.4"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
